[ADD] Implement sign-in form with authentication logic

--- a/frontend/src/pages/signin.html
+++ b/frontend/src/pages/signin.html
@@ -10,8 +10,12 @@
     <div id="navbar-root"></div>
     <div class="wrap">
       <div class="card">
-        <h2>Connect</h2>
-        <p>Sign in form placeholder — implement the form here.</p>
+        <h2>Sign in</h2>
+        <form id="signinForm">
+          <label>Username or email<br><input name="username" required /></label><br>
+          <label>Password<br><input name="password" type="password" required /></label><br>
+          <button type="submit" class="btn">Sign in</button>
+        </form>
         <p>Don't have an account? <a class="inline" href="/signup.html">Sign up</a></p>
       </div>
     </div>
@@ -25,10 +29,26 @@
         const root = document.getElementById('navbar-root');
         root.innerHTML = html;
         root.querySelectorAll('button[data-target]').forEach(btn=>{
-          btn.addEventListener('click', ()=>{
-            const target = btn.getAttribute('data-target');
-            window.location.href = target;
-          });
+            btn.addEventListener('click', ()=>{
+                const target = btn.getAttribute('data-target');
+                window.location.href = target;
+            });
+        });
+
+        const form = document.getElementById('signinForm');
+        form?.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const fd = new FormData(form);
+            const body = {};
+            fd.forEach((v, k) => body[k] = v);
+            const res = await fetch('/api/auth/signin', { method: 'POST', headers: { 'content-type': 'application/json' }, body: JSON.stringify(body) });
+            const j = await res.json();
+            if (res.ok && j.token) {
+                localStorage.setItem('token', j.token);
+                window.location.href = '/';
+            } else {
+                alert(j.error || 'Signin failed');
+            }
         });
       })();
     </script>
