[ADD] Implement signup form with validation and API integration

--- a/frontend/src/pages/signup.html
+++ b/frontend/src/pages/signup.html
@@ -11,7 +11,14 @@
     <div class="wrap">
       <div class="card">
         <h2>Create a new account</h2>
-        <p>Sign up form placeholder — implement the form here.</p>
+        <form id="signupForm">
+          <label>First Name<br><input name="firstName" /></label><br>
+          <label>Last Name<br><input name="lastName" /></label><br>
+          <label>Username<br><input name="username" required /></label><br>
+          <label>Email<br><input name="email" type="email" required /></label><br>
+          <label>Password<br><input name="password" type="password" required /></label><br>
+          <button type="submit" class="btn">Sign up</button>
+        </form>
         <p>Already have an account? <a class="inline" href="/signin.html">Sign in</a></p>
       </div>
     </div>
@@ -25,10 +32,26 @@
         const root = document.getElementById('navbar-root');
         root.innerHTML = html;
         root.querySelectorAll('button[data-target]').forEach(btn=>{
-          btn.addEventListener('click', ()=>{
-            const target = btn.getAttribute('data-target');
-            window.location.href = target;
+            btn.addEventListener('click', ()=>{
+                const target = btn.getAttribute('data-target');
+                window.location.href = target;
           });
+        });
+
+        const form = document.getElementById('signupForm');
+        form?.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const fd = new FormData(form);
+            const body = {};
+            fd.forEach((v, k) => body[k] = v);
+            const res = await fetch('/api/auth/signup', { method: 'POST', headers: { 'content-type': 'application/json' }, body: JSON.stringify(body) });
+            const j = await res.json();
+            if (res.ok && j.token) {
+                localStorage.setItem('token', j.token);
+                window.location.href = '/';
+            } else {
+                alert(j.error || 'Signup failed');
+            }
         });
       })();
     </script>
